apps/mealie/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  serviceName: mealie
  template:
    metadata:
      labels:
        app: mealie
        litestream: "true"
      name: mealie
    spec:
      containers:
        - env:
            - name: API_HOST
              value: '*'
            - name: ALLOW_SIGNUP
              value: "true"
            - name: DB_ENGINE
              value: sqlite
            - name: BASE_URL
              value: https://mealie.${GATEWAY_DOMAIN}
            - name: ALLOW_PASSWORD_LOGIN
              value: "false"
            - name: OIDC_AUTH_ENABLED
              value: "true"
            - name: OIDC_SIGNUP_ENABLED
              value: "true"
            - name: OIDC_CONFIGURATION_URL
              value: https://sso.${GATEWAY_DOMAIN}/.well-known/openid-configuration
            - name: OIDC_CLIENT_ID
              value: mealie
            - name: OIDC_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: mealie-secrets
                  key: OIDC_CLIENT_SECRET
            - name: OIDC_AUTO_REDIRECT
              value: "false"
            - name: OIDC_ADMIN_GROUP
              value: mealie-admins
            - name: OIDC_USER_GROUP
              value: mealie
            - name: OIDC_NAME_CLAIM
              value: name
            - name: OIDC_USER_CLAIM
              value: preferred_username
            - name: OIDC_EMAIL_CLAIM
              value: email
            - name: LOG_LEVEL
              value: DEBUG
          image: ghcr.io/mealie-recipes/mealie:v3.27.0
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/app/about
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          name: mealie
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/app/about
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /api/app/about
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
        - args:
            - replicate
          image: litestream/litestream:0.3
          name: litestream
          ports:
            - containerPort: 9090
              name: metrics
              protocol: TCP
          resources:
            limits:
              memory: 96Mi
            requests:
              cpu: 25m
              memory: 96Mi
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
            - mountPath: /etc/litestream.yml
              name: litestream-config
              subPath: litestream.yml
        - env:
            - name: RESTIC_DATA_DIR
              value: /app/data
            - name: BACKUP_SOURCE
              value: /app/data
            - name: RESTIC_REPOSITORY
              value: s3:https://s3.eu-central-2.wasabisys.com/backup.f9k.dev/restic
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: mealie-secrets
                  key: AWS_ACCESS_KEY_ID
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: mealie-secrets
                  key: AWS_SECRET_ACCESS_KEY
            - name: RESTIC_BACKUP_OPTIONS
              value: --exclude-file /etc/restic-ignore.txt
            - name: RESTIC_INSTANT_BACKUP
              value: "0"
            - name: RESTIC_HOST
              value: mealie
            - name: BACKUP_CRON
              value: 0 */1 * * *
            - name: RESTIC_FORGET_ARGS
              value: --keep-hourly 24 --keep-daily 7 --keep-weekly 4 --keep-monthly 4
          image: hub.f9k.dev/restic-sidecar
          imagePullPolicy: Always
          name: restic
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
            - mountPath: /etc/restic-ignore.txt
              name: litestream-config
              subPath: restic-ignore.txt
        - env:
            - name: LISTEN_PORT
              value: "9091"
            - name: RESTIC_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mealie-secrets
                  key: RESTIC_PASSWORD
            - name: TZ
              value: Europe/Berlin
            - name: REFRESH_INTERVAL
              value: "1800"
            - name: RESTIC_DATA_DIR
              value: /app/data
            - name: BACKUP_SOURCE
              value: /app/data
            - name: RESTIC_REPOSITORY
              value: s3:https://s3.eu-central-2.wasabisys.com/backup.f9k.dev/restic
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: mealie-secrets
                  key: AWS_ACCESS_KEY_ID
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: mealie-secrets
                  key: AWS_SECRET_ACCESS_KEY
            - name: RESTIC_BACKUP_OPTIONS
              value: --exclude-file /etc/restic-ignore.txt
            - name: RESTIC_INSTANT_BACKUP
              value: "0"
            - name: RESTIC_HOST
              value: mealie
            - name: BACKUP_CRON
              value: 0 */1 * * *
            - name: RESTIC_FORGET_ARGS
              value: --keep-hourly 24 --keep-daily 7 --keep-weekly 4 --keep-monthly 4
          image: ngosang/restic-exporter
          imagePullPolicy: Always
          name: restic-prom
          ports:
            - containerPort: 9091
              name: restic-metrics
              protocol: TCP
      volumes:
        - configMap:
            name: mealie-litestream-config
          name: litestream-config
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: mealie-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        volumeMode: Filesystem
