apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  selector:
    app: mealie
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
